--- a/admin/src/components/datatable/datatable.scss
+++ b/admin/src/components/datatable/datatable.scss
@@ -146,7 +146,7 @@
       cursor: pointer;
     }
     
-    .deleteButton {
+    .deleteButton, .updateButton {
       padding: 2px 5px;
       border-radius: 5px;
       color: crimson;
