--- a/admin/src/app/views/newHotel/newHotel.scss
+++ b/admin/src/app/views/newHotel/newHotel.scss
@@ -54,6 +54,7 @@
               display: flex;
               align-items: center;
               gap: 10px;
+              color: #c01e1e;
 
               .icon {
                 cursor: pointer;
