--- a/admin/src/app/views/newRoom/newRoom.scss
+++ b/admin/src/app/views/newRoom/newRoom.scss
@@ -41,11 +41,14 @@
 
           .formInput {
             width: 40%;
-
+            display: flex;
+            flex-direction: column;   
+            
             label {
               display: flex;
               align-items: center;
               gap: 10px;
+              color: #c01e1e;
 
               .icon {
                 cursor: pointer;
@@ -69,9 +72,14 @@
             font-weight: bold;
             cursor: pointer;
             margin-top: 10px;
+            margin: auto;
           }
         }
       }
     }
   }
+}
+
+.input-filled {
+  color: blue; /*Input color */
 }
