--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -5,7 +5,7 @@
 // @import "./app/views/login/login.scss";
 // @import "./app/views/changecredentials/ChangeCredentials.scss";
 // @import "./components/Orders/OrderResults.scss";
-
+@import "../../client/src/style/toast.scss";
 
 .App {
     text-align: center;
