--- a/client/src/components/navbar/navbar.scss
+++ b/client/src/components/navbar/navbar.scss
@@ -43,5 +43,9 @@
     border-radius: 5px;
     font-family: "Bebas Neue";
     font-size: 18px;
+    span{
+      color: #003580;
+      font-weight: bold;
+    }
   }
 }
