--- a/client/src/app/views/register/register.scss
+++ b/client/src/app/views/register/register.scss
@@ -7,7 +7,8 @@
 }
 
 .regBody {
-  background: linear-gradient(130deg, #003580, #00c6ff);
+ // background: linear-gradient(130deg, #003580, #00c6ff);
+  background:  linear-gradient(130deg, rgb(118, 62, 170),  rgb(177, 149, 202));
   display: flex;
   height: 100vh;
   justify-content: center;
@@ -35,7 +36,8 @@
       bottom: 0;
       height: 3px;
       width: 80px;
-      background: linear-gradient(130deg, #003580, #00c6ff);
+     // background: linear-gradient(130deg, #003580, #00c6ff);
+     background:  linear-gradient(130deg, rgb(118, 62, 170),  rgb(177, 149, 202));
     }
   }
 
@@ -46,9 +48,14 @@
     margin-right: 30px;
   }
 
+  .register__footer{
+    display: flex;
+  }
+
   &__btn {
     border: none;
-    background-color: #0071c2;
+   // background-color: #0071c2;
+   background-color:rgb(118, 62, 170);
     color: white;
     font-weight: bold;
     cursor: pointer;
@@ -60,10 +67,10 @@
   }
 
   &__btn:disabled {
-    background-color: #0071c28c;
+   // background-color: #0071c28c;
+   background-color:rgb(167, 145, 187);
     cursor: not-allowed;     
   }
-
 
   .submit-success,
   .submit-error {
