--- a/client/src/app/views/login/login.scss
+++ b/client/src/app/views/login/login.scss
@@ -1,3 +1,5 @@
+
+@import  "../../../../../client/src/style/myColors.scss";
 * {
   box-sizing: border-box;
   margin: 0;
@@ -5,7 +7,7 @@
 }
 
 .logBody {
-  background: linear-gradient(130deg, rgb(118, 62, 170), rgb(177, 149, 202));
+  background: linear-gradient(130deg, $primary-color, rgb(177, 149, 202));
   display: flex;
   height: 100vh;
   justify-content: center;
@@ -43,19 +45,25 @@
       bottom: 0;
       height: 3px;
       width: 30px;
-      background: linear-gradient(130deg, rgb(118, 62, 170), rgb(177, 149, 202));
+      background: linear-gradient(130deg, $primary-color, rgb(177, 149, 202));
     }
   }
 
   &__button {
     border: none;
     padding: 10px 20px;
-    background-color: rgb(118, 62, 170);
+    background-color:$primary-color;
     color: white;
     font-weight: bold;
     cursor: pointer;
     border-radius: 5px;
-
+    margin-top: 20px;
+    transition: background-color 0.3s ease;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    &:hover {
+      background-color: $color-hover;
+      transform: scale(1.05);
+    }
     &:disabled {
       background-color: rgb(167, 145, 187);
       cursor: not-allowed;
