--- a/client/src/app/views/eachHotel/hotel.scss
+++ b/client/src/app/views/eachHotel/hotel.scss
@@ -1,118 +1,121 @@
-// .hotel-container {
-//   display: flex;
-//   flex-direction: column;
-//   align-items: center;
-//   margin-top: 20px;
 
-//   &__wrapper {
+/////////////////--------------
+// .hotelContainer {
+//     display: flex;
+//     flex-direction: column;
+//     align-items: center;
+//     margin-top: 20px;
+//   }
+
+//   .hotelWrapper {
 //     width: 100%;
 //     max-width: 1024px;
 //     display: flex;
 //     flex-direction: column;
 //     gap: 10px;
 //     position: relative;
-
-//     &__book-now {
-//       position: absolute;
-//       top: 10px;
-//       border: none;
-//       right: 0;
-//       padding: 10px 20px;
-//       background-color: #0071c2;
-//       color: white;
-//       cursor: pointer;
-//       font-weight: bold;
-//       border-radius: 5px;
-//     }
-
-//     &__title {
-//       font-size: 24px;
-//     }
-
-//     &__address {
-//       font-size: 12px;
-//       display: flex;
-//       align-items: center;
-//       gap: 10px;
-//     }
-
-//     &__distance {
-//       color: #0071c2;
-//       font-weight: 500;
-//     }
-
-//     &__price-highlight {
-//       color: #008009;
-//       font-weight: 500;
-//     }
-
-//     &__images {      
-//       display: flex;
-//       flex-wrap: wrap;
-//       justify-content: space-between;
-//     }
-
-//     &__img-wrapper {
-//       width: 33%;
-
-//       &__img {
-//         width: 200px;
-//         height: 200px;
-//         object-fit: cover;
-//         cursor: pointer;
-//       }
-//     }
-
-//     &__details {
-//       display: flex;
-//       justify-content: space-between;
-//       gap: 20px;
-//       margin-top: 20px;
-//     }
-
-//     &__details-texts {
-//       flex: 3;
-
-//       &__desc {
-//         font-size: 14px;
-//         margin-top: 20px;
-//       }
-//     }
-
-//     &__details-price {
-//       flex: 1;
-//       background-color: #ebf3ff;
-//       padding: 20px;
-//       display: flex;
-//       flex-direction: column;
-//       gap: 20px;
-
-//       > h1 {
-//         font-size: 18px;
-//         color: #555;
-//       }
-
-//       > span {
-//         font-size: 14px;
-//       }
-
-//       > h2 {
-//         font-weight: 300;
-//       }
-
-//       > button {
-//         border: none;
-//         padding: 10px 20px;
-//         background-color: #0071c2;
-//         color: white;
-//         font-weight: bold;
-//         cursor: pointer;
-//         border-radius: 5px;
-//       }
-//     }
 //   }
 
-//   &__slider {
+//   .hotelWrapper__bookNow{
+//     position:absolute;
+//     top: 10px;
+//     border:none;
+//     right:0;
+//     padding:10px 20px;
+//     background-color: #0071c2;
+//     color:white;
+//     cursor:pointer;
+//     font-weight: bold;
+//     border-radius: 5px;
+//   }
+
+//   .hotelWrapper__title {
+//     font-size: 24px;
+//   }
+
+//   .hotelWrapper__address {
+//     font-size: 12px;
+//     display: flex;
+//     align-items: center;
+//     gap: 10px;
+//   }
+
+//   .hotelWrapper__distance {
+//     color: #0071c2;
+//     font-weight: 500;
+//   }
+
+//   .hotelWrapper__priceHighlight {
+//     color: #008009;
+//     font-weight: 500;
+//   }
+
+//   .hotelWrapper__images {
+//     display: flex;
+//     flex-wrap: wrap;
+//     justify-content: space-between;
+//   }
+
+//   .hotelWrapper__imgWrapper {
+//     width: 33%;
+//   }
+
+//   .hotelWrapper__img {
+//     width: 100%;
+//     height: 200px;
+//     object-fit: cover;
+//     cursor: pointer;
+//   }
+
+//   .hotelWrapper__details{
+//     display: flex;
+//     justify-content: space-between;
+//     gap:20px;
+//     margin-top: 20px;
+//   }
+
+//   .hotelWrapper__detailsTexts{
+//     flex:3;
+//   }
+
+//   .hotelWrapper__desc{
+//     font-size:14px;
+//     margin-top: 20px;
+//   }
+
+//   .hotelWrapper__detailsPrice{
+//     flex:1;
+//     background-color: #ebf3ff;
+//     padding: 20px;
+//     display: flex;
+//     flex-direction: column;
+//     gap:20px;
+//   }
+
+//   .hotelWrapper__detailsPrice>h1{
+//     font-size: 18px;
+//     color: #555;
+//   }
+
+//   .hotelWrapper__detailsPrice>span{
+//     font-size: 14px;
+//   }
+
+//   .hotelWrapper__detailsPrice>h2{
+//     font-weight: 300;;
+//   }
+
+//   .hotelWrapper__detailsPrice>button{
+//     border:none;
+//     padding: 10px 20px;
+//     background-color: #0071c2;
+//     color:white;
+//     font-weight: bold;
+//     cursor:pointer;
+//     border-radius: 5px;
+//   }
+
+//   .slider{
 //     position: sticky;
 //     top: 0;
 //     left: 0;
@@ -122,178 +125,182 @@
 //     z-index: 999;
 //     display: flex;
 //     align-items: center;
-
-//     &__wrapper {
-//       width: 100%;
-//       height: 100%;
-//       display: flex;
-//       justify-content: center;
-//       align-items: center;
-
-//       &__img {
-//         width: 80%;
-//         height: 80vh;
-//       }
-//     }
-
-//     &__close {
-//       font-size: 30px;
-//       color: lightgray;
-//       cursor: pointer;
-//       position: absolute;
-//       top: 20px;
-//       right: 20px;
-//     }
-
-//     &__arrow {
-//       font-size: 50px;
-//       color: lightgray;
-//       cursor: pointer;
-//       margin: 20px;
-//     }
 //   }
-// }
+
+//   .slider__wrapper{
+//     width: 100%;
+//     height: 100%;
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//   }
+
+//   .slider__img{
+//     width: 80%;
+//     height: 80vh;
+//   }
+
+//   .slider__close{
+//     position: absolute;
+//     top: 20px;
+//     right: 20px;
+//     font-size: 30px;
+//     color: lightgray;
+//     cursor: pointer;
+//   }
+
+//   .slider__arrow{
+//   margin: 20px;
+//   font-size: 50px;
+//   color: lightgray;
+//   cursor: pointer;
+//   }
+
+
+//----------------
+@import  "../../../../../client/src/style/myColors.scss";
 .hotelContainer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 20px;
-  }
-  
-  .hotelWrapper {
-    width: 100%;
-    max-width: 1024px;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    position: relative;
-  }
-  
-  .hotelWrapper__bookNow{
-    position:absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.hotelWrapper {
+  width: 100%;
+  max-width: 1024px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  position: relative;
+
+  &__bookNow {
+    position: absolute;
     top: 10px;
-    border:none;
-    right:0;
-    padding:10px 20px;
-    background-color: #0071c2;
-    color:white;
-    cursor:pointer;
+    border: none;
+    right: 0;
+    padding: 10px 20px;
+    // background-color: #0071c2;
+    background-color:$primary-color;
+    color: white;
+    cursor: pointer;
     font-weight: bold;
     border-radius: 5px;
+    transition: background-color 0.3s ease;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    &:hover {
+      background-color: $color-hover;
+      transform: scale(1.05);
+    }
   }
-  
-  .hotelWrapper__title {
+
+  &__title {
     font-size: 24px;
   }
-  
-  .hotelWrapper__address {
+
+  &__address {
     font-size: 12px;
     display: flex;
     align-items: center;
     gap: 10px;
   }
-  
-  .hotelWrapper__distance {
+
+  &__distance {
     color: #0071c2;
     font-weight: 500;
   }
-  
-  .hotelWrapper__priceHighlight {
+
+  &__priceHighlight {
     color: #008009;
     font-weight: 500;
   }
-  
-  .hotelWrapper__images {
+
+  &__images {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
   }
-  
-  .hotelWrapper__imgWrapper {
+
+  &__imgWrapper {
     width: 33%;
   }
-  
-  .hotelWrapper__img {
+
+  &__img {
     width: 100%;
     height: 200px;
     object-fit: cover;
     cursor: pointer;
   }
-  
-  .hotelWrapper__details{
+
+  &__details {
     display: flex;
     justify-content: space-between;
-    gap:20px;
+    gap: 20px;
     margin-top: 20px;
   }
-  
-  .hotelWrapper__detailsTexts{
-    flex:3;
+
+  &__detailsTexts {
+    flex: 3;
   }
-  
-  .hotelWrapper__desc{
-    font-size:14px;
+
+  &__desc {
+    font-size: 14px;
     margin-top: 20px;
   }
-  
-  .hotelWrapper__detailsPrice{
-    flex:1;
+
+  &__detailsPrice {
+    flex: 1;
     background-color: #ebf3ff;
     padding: 20px;
     display: flex;
     flex-direction: column;
-    gap:20px;
+    gap: 20px;
   }
-  
-  .hotelWrapper__detailsPrice>h1{
+
+  &__detailsPrice>h1 {
     font-size: 18px;
     color: #555;
   }
-  
-  .hotelWrapper__detailsPrice>span{
+
+  &__detailsPrice>span {
     font-size: 14px;
   }
-  
-  .hotelWrapper__detailsPrice>h2{
-    font-weight: 300;;
+
+  &__detailsPrice>h2 {
+    font-weight: 300;
+    ;
   }
-  
-  .hotelWrapper__detailsPrice>button{
-    border:none;
+
+  &__detailsPrice>button {
+    border: none;
     padding: 10px 20px;
-    background-color: #0071c2;
-    color:white;
+   // background-color: #0071c2;
+   background-color:$primary-color;
+    color: white;
     font-weight: bold;
-    cursor:pointer;
+    cursor: pointer;
     border-radius: 5px;
+    transition: background-color 0.3s ease;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    &:hover {
+      background-color: $color-hover;
+      transform: scale(1.05);
+    }
   }
-  
-  .slider{
-    position: sticky;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background-color: rgba(0, 0, 0, 0.613);
-    z-index: 999;
-    display: flex;
-    align-items: center;
-  }
-  
-  .slider__wrapper{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .slider__img{
-    width: 80%;
-    height: 80vh;
-  }
-  
-  .slider__close{
+}
+
+.slider {
+  position: sticky;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.613);
+  z-index: 999;
+  display: flex;
+  align-items: center;
+
+  &__close {
     position: absolute;
     top: 20px;
     right: 20px;
@@ -301,15 +308,24 @@
     color: lightgray;
     cursor: pointer;
   }
-  
-  .slider__arrow{
-  margin: 20px;
-  font-size: 50px;
-  color: lightgray;
-  cursor: pointer;
+
+  &__wrapper {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .slider__img {
+      width: 80%;
+      height: 80vh;
+    }
   }
-  
-  
-  
-  
-  
+
+  &__arrow {
+    margin: 20px;
+    font-size: 50px;
+    color: lightgray;
+    cursor: pointer;
+  }
+}
