--- a/client/src/app/views/register/register.scss
+++ b/client/src/app/views/register/register.scss
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC&family=Anek+Odia:wght@100;300&family=Beau+Rivage&family=Bebas+Neue&family=Charis+SIL&family=Exo:wght@200;300;400;700;800&family=Lobster&family=Maven+Pro&family=Montserrat:ital,wght@0,100;0,400;0,500;0,600;0,700;0,800;0,900;1,200&family=Noto+Serif:wght@700&family=Open+Sans:wght@300&family=Poppins:wght@200&family=Raleway&family=Rubik:ital,wght@1,300&family=Shadows+Into+Light&family=Source+Serif+Pro:ital@1&family=Water+Brush&display=swap');
-
+@import  "../../../../../client/src/style/myColors.scss";
 * {
   box-sizing: border-box;
   margin: 0;
@@ -52,7 +52,7 @@
 
   &__btn {
     border: none;
-   background-color:rgb(118, 62, 170);
+    background-color:rgb(118, 62, 170);
     color: white;
     font-weight: bold;
     cursor: pointer;
@@ -60,6 +60,13 @@
     width: 80px;
     height: 30px;
     margin-top: 20px;  
+    transition: background-color 0.3s ease;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+   // background: linear-gradient(to right, $primary-color, $secondary-color);
+    &:hover {
+      background-color: $color-hover;
+      transform: scale(1.05);
+    }
   
   }
 
