--- a/client/src/components/navbar/navbar.scss
+++ b/client/src/components/navbar/navbar.scss
@@ -1,12 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC&family=Anek+Odia:wght@100;300&family=Beau+Rivage&family=Bebas+Neue&family=Charis+SIL&family=Exo:wght@200;300;400;700;800&family=Lobster&family=Maven+Pro&family=Montserrat:ital,wght@0,100;0,400;0,500;0,600;0,700;0,800;0,900;1,200&family=Noto+Serif:wght@700&family=Open+Sans:wght@300&family=Poppins:wght@200&family=Raleway&family=Rubik:ital,wght@1,300&family=Shadows+Into+Light&family=Source+Serif+Pro:ital@1&family=Water+Brush&display=swap');
-
+@import  "../../../../client/src/style/myColors.scss";
 * {
   margin: 0;
 }
 
 .navbar {
   height: 50px;
-  background-color: rgb(118, 62, 170);
+  background-color: $primary-color;
   display: flex;
   justify-content: center;
 
@@ -38,6 +38,13 @@
     border-radius: 5px;
     font-family: "Bebas Neue";
     font-size: 18px;
+    transition: background-color 0.3s ease;
+   // box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+   // background: linear-gradient(to right, $primary-color, $secondary-color);
+    &:hover {
+      background-color:rgb(207, 194, 194);
+      transform: scale(1.05);
+    }
 
     span {
       color: #003580;
