--- a/client/src/components/searchItem/searchItem.scss
+++ b/client/src/components/searchItem/searchItem.scss
@@ -1,3 +1,4 @@
+@import  "../../../../client/src/style/myColors.scss";
 .searchItem {
   margin-left: 100px;
     border: 1px solid lightgray;
@@ -12,8 +13,6 @@
       margin: auto;
       width: 300px;
       height: 250px;
-      
-      // object-fit: cover;
     }
   
     &__desc {
@@ -32,7 +31,7 @@
       background-color: #008009;
       color: white;
       width: max-content;
-      padding: 3px;
+      padding: 5px;
       border-radius: 5px;
     }
   
@@ -105,123 +104,20 @@
     }
   
     &__checkButton {
-      background-color: #0071c2;
+     // background-color: #0071c2;
+     background-color:$primary-color;
       color: white;
       font-weight: bold;
-      padding: 10px 5px;
+      padding: 10px 10px;
       border: none;
       cursor: pointer;
       border-radius: 5px;
+      transition: background-color 0.3s ease;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+       &:hover {
+        background-color: $color-hover;
+        transform: scale(1.05);
+      }
     }
   }
   
-// .searchItem {
-//   border: 1px solid lightgray;
-//   padding: 10px;
-//   border-radius: 5px;
-//   display: flex;
-//   justify-content: space-between;
-//   gap: 20px;
-//   margin-bottom: 20px;
-// }
-
-// .searchItem__img {
-//   width: 200px;
-//   height: 200px;
-//   object-fit: cover;
-// }
-
-// .searchItem__desc {
-//   display: flex;
-//   flex-direction: column;
-//   gap: 10px;
-//   flex: 2;
-// }
-
-// .searchItem__distance {
-//   font-size: 12px;
-// }
-
-// .searchItem__taxiOp {
-//   font-size: 12px;
-//   background-color: #008009;
-//   color: white;
-//   width: max-content;
-//   padding: 3px;
-//   border-radius: 5px;
-// }
-
-// .searchItem__subtitle {
-//   font-size: 12px;
-//   font-weight: bold;
-// }
-
-// .searchItem__features {
-//   font-size: 12px;
-// }
-
-// .searchItem__cancelOp {
-//   font-size: 12px;
-//   color: #008009;
-//   font-weight: bold;
-// }
-
-// .searchItem__cancelOpSubtitle {
-//   font-size: 12px;
-//   color: #008009;
-// }
-
-// .searchItem__title {
-//   font-size: 20px;
-//   color: #0071c2;
-// }
-
-// .searchItem__details {
-//   flex: 1;
-//   display: flex;
-//   flex-direction: column;
-//   justify-content: space-between;
-// }
-
-// .searchItem__rating {
-//   display: flex;
-//   justify-content: space-between;
-
-//   span {
-//     font-weight: 500;
-//   }
-
-//   button {
-//     background-color: #003580;
-//     color: white;
-//     padding: 5px;
-//     font-weight: bold;
-//     border: none;
-//   }
-// }
-
-// .searchItem__detailTexts {
-//   text-align: right;
-//   display: flex;
-//   flex-direction: column;
-//   gap: 5px;
-// }
-
-// .searchItem__price {
-//   font-size: 24px;
-// }
-
-// .searchItem__taxOp {
-//   font-size: 12px;
-//   color: gray;
-// }
-
-// .searchItem__checkButton {
-//   background-color: #0071c2;
-//   color: white;
-//   font-weight: bold;
-//   padding: 10px 5px;
-//   border: none;
-//   cursor: pointer;
-//   border-radius: 5px;
-// }
