--- a/client/src/style/toast.scss
+++ b/client/src/style/toast.scss
@@ -33,8 +33,8 @@
 }
 
 .custom-toast .Toastify__progress-bar {
-  background-color: #ffca28; /* Цвет фона прогресс-бара */
-  height: 10px; /* Высота прогресс-бара */
+  background-color: #ffca28;
+  height: 10px; 
 }
 
 
