--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,5 +1,5 @@
 @import "../../client/src/style/toast.scss";
-
+@import "../../client/src/style/myColors.scss";
 .App {
     text-align: center;
   }
