--- a/admin/src/app/views/home/home.scss
+++ b/admin/src/app/views/home/home.scss
@@ -1,11 +1,10 @@
 .home {
   display: flex;
 
-  .homeContainer {
+  .home-container {
     flex: 6;
 
-    .widgets,
-    .charts {
+    .widgets,.charts {
       display: flex;
       padding: 20px;
       gap: 20px;
@@ -15,13 +14,13 @@
       padding: 5px 20px;
     }
 
-    .listContainer {
+    .list-cntainer {
       -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
       box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
       padding: 20px;
       margin: 20px;
 
-      .listTitle {
+      .list-title {
         font-weight: 500;
         color: gray;
         margin-bottom: 15px;
