--- a/admin/src/app/views/newHotel/newHotel.scss
+++ b/admin/src/app/views/newHotel/newHotel.scss
@@ -2,23 +2,18 @@
   width: 100%;
   display: flex;
 
-  .newContainer {
+  .new-container {
     flex: 6;
 
-    .newContainer__top,
-    .newContainer__bottom {
+    &__top,
+    &__bottom {
       -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
       box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
       padding: 10px;
       margin: 20px;
       display: flex;
 
-      h1 {
-        color: lightgray;
-        font-size: 20px;
-      }
-
-      .newContainer__left {
+      .new-container__left {
         flex: 1;
         text-align: center;
 
@@ -30,7 +25,7 @@
         }
       }
 
-      .newContainer__right {
+      .new-container__right {
         flex: 2;
 
         form {
@@ -39,18 +34,19 @@
           gap: 30px;
           justify-content: space-around;
 
-          .selectRooms{
+          .select-rooms {
             width: 90%;
             color: #c01e1e;
             font-size: 20px;
-            select{
+
+            select {
               width: 100%;
               padding: 10px;
               font-size: 16px;
             }
           }
 
-          .formInput {
+          .form-input {
             width: 40%;
 
             label {
@@ -58,7 +54,8 @@
               align-items: center;
               gap: 10px;
               color: #c01e1e;
-              font-size:20px;
+              font-size: 20px;
+
               .icon {
                 cursor: pointer;
               }
@@ -86,13 +83,19 @@
         }
       }
     }
+
+    h1 {
+      color: lightgray;
+      font-size: 20px;
+    }
+
   }
 }
 
 .input-placeholder {
-  color: #c01e1e; /* laceholder  color*/
+  color: #c01e1e; 
 }
 
 .input-filled {
-  color: blue; /*Input color */
+  color: blue;
 }
