--- a/admin/src/components/navbar/navbar.scss
+++ b/admin/src/components/navbar/navbar.scss
@@ -1,5 +1,5 @@
 .navbar {
-  height: 50px;
+  height: 60px;
   border-bottom: 0.5px solid rgb(231, 228, 228);
   display: flex;
   align-items: center;
@@ -14,7 +14,7 @@
     justify-content: space-between;
 
     .items {
-      display: flex;
+      display: flex;  
       align-items: center;
 
       .item {
@@ -24,7 +24,12 @@
         position: relative;
 
         .icon {
-          font-size: 20px;
+          font-size: 30px;
+          //color: black;
+          &:hover {
+            cursor: pointer;
+          
+          }
         }
       }
     }
