--- a/admin/src/app/views/newRoom/newRoom.scss
+++ b/admin/src/app/views/newRoom/newRoom.scss
@@ -2,12 +2,11 @@
   width: 100%;
   display: flex;
 
-  .newContainer {
+  .new-container {
     flex: 6;
 
-    .top,
-    .bottom {
-      -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
+    &__top {
+    //  -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
       box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
       padding: 10px;
       margin: 20px;
@@ -17,74 +16,73 @@
         color: lightgray;
         font-size: 20px;
       }
+    }
 
-      .left {
-        flex: 1;
-        text-align: center;
+    &__bottom {
+    //  -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
+      box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
+      padding: 10px;
+      margin: 20px;
+      display: flex;
+    }
 
-        img {
-          width: 100px;
-          height: 100px;
-          border-radius: 50%;
-          object-fit: cover;
+    &__right {
+      flex: 2;
+    }
+
+    &__form {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 30px;
+      justify-content: space-around;
+    }
+
+    &__form-input {
+      width: 40%;
+      display: flex;
+      flex-direction: column;
+      font-size: 20px;
+
+      select,
+      textarea {
+        font-size: 16px;
+      }
+
+      label {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        color: #c01e1e;
+        font-size: 20px;
+
+        .icon {
+          cursor: pointer;
         }
       }
 
-      .right {
-        flex: 2;
-
-        form {
-          display: flex;
-          flex-wrap: wrap;
-          gap: 30px;
-          justify-content: space-around;
-
-          .formInput {
-            width: 40%;
-            display: flex;
-            flex-direction: column;    
-            font-size: 20px;  
-            select, textarea{
-              font-size: 16px;  
-            }       
-
-            label {
-              display: flex;
-              align-items: center;
-              gap: 10px;
-              color: #c01e1e;
-              font-size: 20px;
-              .icon {
-                cursor: pointer;
-              }
-            }
-
-            input {
-              width: 100%;
-              padding: 5px;
-              border: none;
-              border-bottom: 1px solid gray;
-              font-size: 16px;
-            }
-          }
-
-          button {
-            width: 150px;
-            padding: 10px;
-            border: none;
-            background-color: teal;
-            color: white;
-            font-weight: bold;
-            cursor: pointer;
-            margin-top: 10px;
-            margin: auto;
-          }
-        }
+      input {
+        width: 100%;
+        padding: 5px;
+        border: none;
+        border-bottom: 1px solid gray;
+        font-size: 16px;
       }
+    }
+
+    &__form-button {
+      width: 150px;
+      padding: 10px;
+      border: none;
+      background-color: teal;
+      color: white;
+      font-weight: bold;
+      cursor: pointer;
+      margin-top: 10px;
+      margin: auto;
     }
   }
 }
 
 .input-filled {
-  color: blue; /*Input color */
+  color: blue; 
 }
