--- a/admin/src/components/datatable/datatable.scss
+++ b/admin/src/components/datatable/datatable.scss
@@ -1,9 +1,8 @@
-
-.datatable {
+.data-table {
   height: 600px;
   padding: 20px;
-  
-  .datatableTitle{
+
+  &__title {
     width: 100%;
     font-size: 24px;
     color: gray;
@@ -45,30 +44,33 @@
       background-color: rgba(0, 128, 0, 0.05);
       color: green;
     }
+
     &.pending {
       background-color: rgba(255, 217, 0, 0.05);
       color: goldenrod;
     }
+
     &.passive {
       background-color: rgba(255, 0, 0, 0.05);
       color: crimson;
     }
   }
 
-  .cellAction {
+  .cell-action {
     display: flex;
     align-items: center;
     gap: 15px;
 
-    .viewButton {
+    .view-button {
       padding: 2px 5px;
       border-radius: 5px;
       color: darkblue;
       border: 1px dotted rgba(0, 0, 139, 0.596);
       cursor: pointer;
     }
-    
-    .deleteButton, .updateButton {
+
+    .delete-button,
+    .update-button {
       padding: 2px 5px;
       border-radius: 5px;
       color: crimson;
