--- a/admin/src/components/sidebar/sidebar.scss
+++ b/admin/src/components/sidebar/sidebar.scss
@@ -3,7 +3,7 @@
   border-right: 0.5px solid rgb(230, 227, 227);
   min-height: 100vh;
   background-color: white;
-
+  box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
   .top {
     height: 50px;
     display: flex;
