--- a/client/src/style/myColors.scss
+++ b/client/src/style/myColors.scss
@@ -2,3 +2,7 @@ $primary-color: rgb(118, 62, 170);
 $secondary-color: rgb(65, 17, 17);
 $color-hover: rgb(90, 46, 131);
 $background-color: rgb(158, 98, 214);
+$gradient-end-color: rgb(177, 149, 202);
+$disabled-button-color: rgb(167, 145, 187);
+$box-shadow-color: rgba(0, 0, 0, 0.2);
+$secondary-background-color: rgb(204, 168, 238);
