--- a/admin/src/app/views/newHotel/newHotel.scss
+++ b/admin/src/app/views/newHotel/newHotel.scss
@@ -7,13 +7,13 @@
 
     &__top,
     &__bottom {
-     // -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
       box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
       padding: 10px;
       margin: 20px;
       display: flex;
+    }
 
-      .new-container__left {
+    &__left {
         flex: 1;
         text-align: center;
 
@@ -25,7 +25,7 @@
         }
       }
 
-      .new-container__right {
+      &__right {
         flex: 2;
 
         form {
@@ -49,7 +49,7 @@
           .form-input {
             width: 40%;
 
-            label {
+           label {
               display: flex;
               align-items: center;
               gap: 10px;
@@ -82,18 +82,17 @@
           }
         }
       }
-    }
+ 
 
     h1 {
       color: lightgray;
       font-size: 20px;
     }
-
   }
 }
 
 .input-placeholder {
-  color: #c01e1e; 
+  color: #c01e1e;
 }
 
 .input-filled {
