--- a/admin/src/app/views/newUser/newUser.scss
+++ b/admin/src/app/views/newUser/newUser.scss
@@ -7,8 +7,7 @@
     flex: 6;
 
     .new__top,
-    .new__bottom {
-     // -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
+    .new__bottom {   
       box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
       padding: 10px;
       margin: 20px;
@@ -50,7 +49,7 @@
               display: flex;
               align-items: center;
               gap: 10px;
-              color: #c01e1e; /* laceholder  color*/
+              color: #c01e1e; 
               .icon {
                 cursor: pointer;
               }
@@ -64,11 +63,11 @@
             }
 
             .input-placeholder {
-              color: #c01e1e; /* laceholder  color*/
+              color: #c01e1e;
             }
             
             .input-filled {
-              color: blue; /*Input color */
+              color: blue; 
             }
             
           }
