--- a/admin/src/style/dark.scss
+++ b/admin/src/style/dark.scss
@@ -2,9 +2,9 @@
   background-color: #111;
   color: rgb(156, 156, 156);
 
-  .chart-grid {
-    stroke: rgba(228, 228, 228, 0.219);
-  }
+  // .chart-grid {
+  //   stroke: rgba(228, 228, 228, 0.219);
+  // }
 
   .single__left,
   .chart,
@@ -63,7 +63,7 @@
           background-color: #333;
         }
 
-        .icon {         
+        .icon {
           color: white;
         }
       }
@@ -73,12 +73,9 @@
   .data-table {
     .data-grid {
       color: gray;
-      border: none;
 
       .cellWithStatus {
         color: gray;
-        border: none;
-
       }
 
       .view-button,
