--- a/client/src/app/views/eachHotel/hotel.scss
+++ b/client/src/app/views/eachHotel/hotel.scss
@@ -67,7 +67,7 @@
       font-weight: bold;
       border-radius: 5px;
       transition: background-color 0.3s ease;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+      box-shadow: 0 2px 4px $box-shadow-color;
 
       &:hover {
         background-color: $color-hover;
@@ -161,7 +161,7 @@
       cursor: pointer;
       border-radius: 5px;
       transition: background-color 0.3s ease;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+      box-shadow: 0 2px 4px $box-shadow-color;
 
       &:hover {
         background-color: $color-hover;
@@ -179,7 +179,7 @@
       cursor: pointer;
       border-radius: 5px;
       transition: background-color 0.3s ease;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+      box-shadow: 0 2px 4px $box-shadow-color;
 
       &:hover {
         background-color: $color-hover;
@@ -187,6 +187,4 @@
       }
     }
   }
-
-
 }
