--- a/client/src/app/views/home/home.scss
+++ b/client/src/app/views/home/home.scss
@@ -1,3 +1,4 @@
+@import "../../../../../client/src/style/myColors.scss";
 .home-container {
     margin-top: 40px;    
     display: flex;
@@ -9,7 +10,7 @@
     .home-title {
       width: 1024px;
       font-size: 20px;
-      color:rgb(118, 62, 170);
+      color: $primary-color;
     }
   }
   
