--- a/client/src/app/views/hotelsList/list.scss
+++ b/client/src/app/views/hotelsList/list.scss
@@ -15,7 +15,7 @@
 
 .list-search {
   flex: 1;
-  background-color: rgb(204, 168, 238);
+  background-color: $secondary-background-color;
   padding: 10px;
   border-radius: 10px;
   position: sticky;
