--- a/client/src/components/header/header.scss
+++ b/client/src/components/header/header.scss
@@ -1,150 +1,150 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC&family=Anek+Odia:wght@100;300&family=Beau+Rivage&family=Bebas+Neue&family=Charis+SIL&family=Exo:wght@200;300;400;700;800&family=Lobster&family=Maven+Pro&family=Montserrat:ital,wght@0,100;0,400;0,500;0,600;0,700;0,800;0,900;1,200&family=Noto+Serif:wght@700&family=Open+Sans:wght@300&family=Poppins:wght@200&family=Raleway&family=Rubik:ital,wght@1,300&family=Shadows+Into+Light&family=Source+Serif+Pro:ital@1&family=Water+Brush&display=swap');
-@import  "../../../../client/src/style/myColors.scss";
-$primary-color: rgb(118, 62, 170);
-$secondary-color: rgb(65, 17, 17);
+@import "../../../../client/src/style/myColors.scss";
 
-*{
+* {
     font-family: "Montserrat";
 }
-.header{ 
-    background-color:$primary-color;
+
+.header {
+    background-color: $primary-color;
     color: #fff;
     display: flex;
     justify-content: center;
-    position:relative;
+    position: relative;
     height: 260px;
-}
 
-.header__container{
-    width: 100%;
-    max-width: 1024px;
-    margin: 20px 0px 75px 0px;
-    
-}
+    &__list {
+        display: flex;
+        gap: 40px;
+        margin-top: 20px;
+        margin-bottom: 20px;
 
-.header__container--listMode{
-    margin: 20px 0px 0px 0px;
-}
+        &__listItem {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
 
-.header__list{
-    display: flex;
-    gap: 40px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
-
-.header__listItem{
-    display: flex;
-    align-items: center;
-    gap:10px;
-}
-
-.header__listItem--active{
-    border: 1px solid white;
-    padding: 10px;
-    border-radius: 20px;
-}
-
-.header__desc{
-    margin: 20px 0px;
-}
-
-.header__btn{ 
-   background: $primary-color;
-    color: white;
-    font-weight: 500;
-    border-radius: 5px;
-    border:none;
-    padding: 10px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-    &:hover {
-      background-color: $color-hover;
-      transform: scale(1.05);
+        &__listItem--active {
+            border: 1px solid white;
+            padding: 10px;
+            border-radius: 20px;
+        }
     }
-}
 
-.header__search{
-    height: 50px;
-    background-color: white;  
-    border: 3px solid $primary-color;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    padding: 10px 0px;
-    border-radius: 5px;
-    position:absolute;
-    bottom: -25px;
-    width: 100%;
-    max-width: 1024px;
-}
+    &__desc {
+        margin: 20px 0px;
+    }
 
-.header__icon{  
-   color: $secondary-color;
-}
+    &__btn {
+        background: $primary-color;
+        color: white;
+        font-weight: 500;
+        border-radius: 5px;
+        border: none;
+        padding: 10px;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 
-.header__searchItem{
-    display: flex;
-    align-items: center;
-    gap:10px;
-}
+        &:hover {
+            background-color: $color-hover;
+            transform: scale(1.05);
+        }
+    }
 
-.header__searchInput{
-    border:none;
-    outline: none;
-}
+    &__search {
+        height: 50px;
+        background-color: white;
+        border: 3px solid $primary-color;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        padding: 10px 0px;
+        border-radius: 5px;
+        position: absolute;
+        bottom: -25px;
+        width: 100%;
+        max-width: 1024px;
+    }
 
-.header__searchText{  
-   color: $secondary-color;
-    cursor: pointer;
-}
+    &__icon {
+        color: $secondary-color;
+    }
 
-.date{
-    position: absolute;
-    top: 50px;
-    z-index: 2;
-}
+    &__searchItem {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+    }
 
-.options{
-    z-index: 2;
-    position:absolute;
-    top: 50px;
-    background-color: white;    
-    color: $secondary-color;
-    border-radius: 5px;
-    -webkit-box-shadow: 0px 0px 10px -5px rgba(0,0,0,0.4);
-    box-shadow: 0px 0px 10px -5px rgba(0,0,0,0.4);
-}
+    &__searchInput {
+        border: none;
+        outline: none;
+    }
 
-.options__item{
-    width: 200px;
-    display: flex;
-    justify-content: space-between;
-    margin:10px;
-}
+    &__searchText {
+        color: $secondary-color;
+        cursor: pointer;
+    }
 
-.options__counter{
-    display:flex;
-    align-items: center;
-    gap:10px;
-    font-size: 12px;
-    color: black;
-}
+    &__container {
+        width: 100%;
+        max-width: 1024px;
+        margin: 20px 0px 75px 0px;
+    }
 
-.options__counterNumber{
-    color:black;
-}
-.options__counterButton{
-    width: 30px;
-    height: 30px;
-    border: 1px solid #0071c2;
-    color: #0071c2;  
-    cursor: pointer;
-    background-color: #fff;
-}
+    &__container--listMode {
+        margin: 20px 0px 0px 0px;
+    }
 
-.options__counterButton:disabled{
-    cursor:not-allowed;
+    .date {
+        position: absolute;
+        top: 50px;
+        z-index: 2;
+    }
+
+    .options {
+        z-index: 2;
+        position: absolute;
+        top: 50px;
+        background-color: white;
+        color: $secondary-color;
+        border-radius: 5px;
+        -webkit-box-shadow: 0px 0px 10px -5px rgba(0, 0, 0, 0.4);
+        box-shadow: 0px 0px 10px -5px rgba(0, 0, 0, 0.4);
+    }
+
+    .options__item {
+        width: 200px;
+        display: flex;
+        justify-content: space-between;
+        margin: 10px;
+    }
+
+    .options__counter {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        font-size: 12px;
+        color: black;
+    }
+
+    .options__counterNumber {
+        color: black;
+    }
+
+    .options__counterButton {
+        width: 30px;
+        height: 30px;
+        border: 1px solid #0071c2;
+        color: #0071c2;
+        cursor: pointer;
+        background-color: #fff;
+    }
+
+    .options__counterButton:disabled {
+        cursor: not-allowed;
+    }
+
 }
