--- a/admin/src/components/datatable/datatable.scss
+++ b/admin/src/components/datatable/datatable.scss
@@ -1,17 +1,18 @@
 .data-table {
   height: 600px;
   padding: 20px;
+ 
 
   &__title {
     width: 100%;
-    font-size: 24px;
-    color: gray;
+    font-size: 24px;   
+    color: white;
     margin-bottom: 10px;
     display: flex;
     align-items: center;
     justify-content: space-between;
 
-    .link{
+    .link{     
       text-decoration: none;
       color: green;
       font-size: 16px;
@@ -75,6 +76,7 @@
       border-radius: 5px;
       color: crimson;
       border: 1px dotted rgba(220, 20, 60, 0.6);
+      font-weight: bold;
       cursor: pointer;
     }
   }
