--- a/client/src/app/views/login/login.scss
+++ b/client/src/app/views/login/login.scss
@@ -37,7 +37,7 @@
     color: black;
     justify-content: center;
     position: relative;
-
+    margin-top: 5px;
     &::before {
       content: "";
       position: absolute;
@@ -47,6 +47,14 @@
       width: 30px;
       background: linear-gradient(130deg, $primary-color, $gradient-end-color);
     }
+  }
+
+  &__invite{
+    margin-top: 5px;
+    color:rgb(47, 31, 104);  
+    span{
+      font-weight: bold;
+    } 
   }
 
   &__button {
