--- a/client/src/app/views/register/register.scss
+++ b/client/src/app/views/register/register.scss
@@ -47,13 +47,17 @@
     margin-right: 30px;
   }
 
+  &__msg{
+    padding-top: 15px;
+    color: $primary-color;
+  }
   .register__footer{
     display: flex;
   }
 
   &__btn {
     border: none;
-    background-color:$primary-color;
+    background-color: $primary-color;
     color: white;
     font-weight: bold;
     cursor: pointer;
@@ -63,12 +67,11 @@
     margin-top: 20px;  
     transition: background-color 0.3s ease;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); 
-    
+
     &:hover {
       background-color: $color-hover;
       transform: scale(1.05);
-    }
-  
+    }  
   }
 
   &__btn:disabled {
@@ -83,5 +86,9 @@
 
   .home__btn{
     margin-left: 20px;
-  }  
+  } 
+  
+ 
 }
+
+
