--- a/client/src/components/propertyList/propertyList.scss
+++ b/client/src/components/propertyList/propertyList.scss
@@ -1,4 +1,4 @@
-.propertyList {
+.property-list {
   width: 100%;
   max-width: 1024px;
   display: flex;
@@ -15,6 +15,7 @@
     width: 100%;
     height: 150px;
     object-fit: cover;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15); 
   }
 
   &__titles {
