--- a/admin/src/app/views/newUser/newUser.scss
+++ b/admin/src/app/views/newUser/newUser.scss
@@ -67,7 +67,8 @@
             }
             
             .input-filled {
-              color: blue; 
+              color: blue;
+              font-family: 'Roboto', sans-serif; 
             }
             
           }
