--- a/admin/src/style/dark.scss
+++ b/admin/src/style/dark.scss
@@ -2,6 +2,11 @@
   background-color: #111;
   color: rgb(156, 156, 156);
 
+  
+  .input-filled {
+    color: white;    
+  }
+
   // .chart-grid {
   //   stroke: rgba(228, 228, 228, 0.219);
   // }
