--- a/client/src/components/promotion/promotion.scss
+++ b/client/src/components/promotion/promotion.scss
@@ -1,5 +1,5 @@
 @import "../../../../client/src/style/myColors.scss";
-.mail {
+.promotion {
     width: 100%;
     margin-top: 40px;
     background: $primary-color;
