--- a/admin/src/components/featured/featured.scss
+++ b/admin/src/components/featured/featured.scss
@@ -2,7 +2,7 @@
   flex: 2;
   box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
   padding: 10px;
-  height: 600px;//eto
+  height: 600px;
 
   .top {
     display: flex;
