--- a/client/src/style/myColors.scss
+++ b/client/src/style/myColors.scss
@@ -6,3 +6,4 @@ $gradient-end-color: rgb(177, 149, 202);
 $disabled-button-color: rgb(167, 145, 187);
 $box-shadow-color: rgba(0, 0, 0, 0.2);
 $secondary-background-color: rgb(204, 168, 238);
+$order-background-color: rgb(211, 193, 228);
